Prevent layout shift when icon changes
When we change the icon, the button element changes the height, because
icons are different size. This prevents that by giving it a min height.

There is still some shiftin in the popup, but I'll let that slide for
now.

--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ a {
 }
 
 .copy-button {
+    min-height: 30px;
     background: none;
     border: none;
 }
